--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./server.js",
+    "dataUsers":"node ./models/data/usersData.js",
+    "dataCars":"node ./models/data/carsData.js",
+    "dataAnime":"node ./models/data/animesData.js",
+    "dataVideogame":"node ./models/data/videogamesData.js",
+    "dataSuperhero":"node ./models/data/superheroesData.js",
+    "dataSpaceMission":"node ./models/data/spaceMissionsData.js",
+    "dataScientist":"node ./models/data/scientistsData.js"
   },
   "repository": {
     "type": "git",
